--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,13 @@ execute_process(
     OUTPUT_VARIABLE git_description
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
+execute_process(
+    COMMAND git --git-dir=${CMAKE_CURRENT_SOURCE_DIR}/.git log --max-count 1 "--format=%ai|%an (%ae)" HEAD
+    OUTPUT_VARIABLE git_author
+    OUTPUT_STRIP_TRAILING_WHITESPACE
+)
 
 add_executable(auto_version src/main.cpp src/version.cpp)
 include_directories(include)
 target_compile_features(auto_version PUBLIC cxx_std_23)
-set_source_files_properties(src/version.cpp PROPERTIES COMPILE_DEFINITIONS AUTO_BUILD_VERSION="${git_description}")
+target_compile_definitions(auto_version PRIVATE AUTO_BUILD_VERSION="${git_description}" AUTO_BUILD_AUTHOR="${git_author}")
