--- a/src/version_static.cpp.in
+++ b/src/version_static.cpp.in
@@ -7,7 +7,7 @@ static_assert(pos2 != ""sv.npos);
 auto const pos3 = description.find("|"sv, pos2 + 1);
 static_assert(pos3 == ""sv.npos);
 
-auto build_version = version{
+version build_version {
     .version = std::string{description.substr(0, pos1)},
     .author = std::string{description.substr(pos2 + 1)},
     .author_date = std::string{description.substr(0, pos2 - pos1 - 1)},
