--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,12 +1,13 @@
 # This starter workflow is for a CMake project running on a single platform. There is a different starter workflow if you need cross-platform coverage.
 # See: https://github.com/actions/starter-workflows/blob/main/ci/cmake-multi-platform.yml
-name: CMake on a single platform
+name: Build and release
 
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
+  release:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
