--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-  release:
 
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
@@ -39,14 +38,10 @@ jobs:
       run: ctest -C ${{env.BUILD_TYPE}}
 
     - name: Upload Artifact
-      uses: actions/upload-artifact@v4.6.0
+      uses: "marvinpinto/action-automatic-releases@latest"
       with:
-        name: auto_version
-        path: ${{github.workspace}}/build/auto_version
-
-    - name: Publish Artifact
-      uses: softprops/action-gh-release@v2
-      with:
-        files: auto_version
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "latest"
+          prerelease: true
+          title: "Development Build"
+          files: ${{github.workspace}}/build/auto_version
