--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -55,3 +55,5 @@ jobs:
         files: |
           Release.txt
       # ${{github.workspace}}/build/auto_version
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
